tests work better

--- a/enclave/Dockerfile
+++ b/enclave/Dockerfile
@@ -12,6 +12,10 @@ RUN npm ci --only=production && npm cache clean --force
 # Copy enclave code
 COPY enclave/ ./enclave/
 
+# Copy scripts and test files
+COPY scripts/ ./scripts/
+COPY test/ ./test/
+
 # Create directories for bulletin board and modules
 RUN mkdir -p bulletin_board private_module
 
@@ -20,7 +24,7 @@ RUN addgroup -g 1001 -S enclave && \
     adduser -S semiprop -u 1001 -G enclave
 
 # Set proper permissions
-RUN chown -R semiprop:enclave /app
+RUN chown -R semiprop:enclave /app && chmod 775 /app/bulletin_board
 USER semiprop
 
 # Expose port
@@ -30,5 +34,5 @@ EXPOSE 3000
 HEALTHCHECK --interval=30s --timeout=5s --start-period=15s --retries=3 \
   CMD node -e "require('http').get('http://localhost:3000/health', (res) => process.exit(res.statusCode === 200 ? 0 : 1))" || exit 1
 
-# Start the semi-proprietary service
-CMD ["node", "enclave/semiprop-service.js"]
+# Publish required module and start service
+CMD ["sh", "-c", "node scripts/publish-module.js private_module/sudoku-solver-selfcontained.js sudoku-solver-v1 && node enclave/semiprop-service.js"]
