--- a/enclave/Dockerfile
+++ b/enclave/Dockerfile
@@ -34,5 +34,5 @@ EXPOSE 3000
 HEALTHCHECK --interval=30s --timeout=5s --start-period=15s --retries=3 \
   CMD node -e "require('http').get('http://localhost:3000/health', (res) => process.exit(res.statusCode === 200 ? 0 : 1))" || exit 1
 
-# Publish required module and start service
-CMD ["sh", "-c", "node scripts/publish-module.js private_module/sudoku-solver-selfcontained.js sudoku-solver-v1 && node enclave/semiprop-service.js"]
+# Start the enclave service
+CMD ["node", "enclave/semiprop-service.js"]
