--- a/package.json
+++ b/package.json
@@ -18,7 +18,13 @@
   "author": "xordi-examples",
   "license": "MIT",
   "dependencies": {
-    "@typescript-eslint/parser": "^6.0.0"
+    "@phala/dstack-sdk": "^0.5.6",
+    "@typescript-eslint/parser": "^6.0.0",
+    "elliptic": "^6.6.1",
+    "secp256k1": "^5.0.1"
+  },
+  "devDependencies": {
+    "@octokit/rest": "^22.0.0"
   },
   "engines": {
     "node": ">=16.0.0"
